# brickbreaker-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/application/: game_service.rs  game_state.rs  level.rs  mod.rs
src/application/ports/: input_provider.rs  mod.rs  renderer.rs
src/domain/: mod.rs
src/domain/entities/: ball.rs  brick.rs  paddle.rs
src/domain/ports/: collision_detector.rs  mod.rs  scorer.rs
src/domain/services/: collision_service.rs  mod.rs  scoring_service.rs
src/domain/value_objects/: dimensions.rs  mod.rs  position.rs  velocity.rs
src/infrastructure/: macroquad_input.rs  macroquad_renderer.rs  mod.rs
